syntax = "proto3";

package cloud.deps.extractor.api;

import "deps.proto";

import "github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis/google/api/annotations.proto";

option go_package = "api";

message ExtractRequest {
    string separator = 1;
    map<string, string> fileContents = 2;
    string url = 3;
}

message ExtractResponse {
    repeated cloud.deps.extractor.api.DependencyManagementFile managementFiles = 1;
}

message MatchRequest {
    string separator = 1;
    repeated string paths = 2;
}

message MatchResponse {
    repeated string matchedPaths = 1;
}

service DependencyExtractor {
    rpc Match(MatchRequest) returns (MatchResponse) {
        option (google.api.http) = {
            post: "/v1/dependencies/match"
            body: "*"
        };
    }

    rpc Extract(ExtractRequest) returns (ExtractResponse) {
        option (google.api.http) = {
            post: "/v1/dependencies/extract"
            body: "*"
        };
    }
}
